# kasa_hs300

./: ENHANCEMENTS.md  KasaSmartPowerStrip.py  PI_TROUBLESHOOTING.md  README.md  config.py  debug_device_info.py  demo.py  diagnose_pi_connection.py  install.py  pyproject.toml  requirements-test.txt  requirements.txt  run_cli.py  run_tests.py  setup.py
src/: kasa_cli.py
tests/: __init__.py  test_basic.py  test_kasa_cli.py
web_app/: README.md  app.py  config.json  requirements.txt  run_web_app.py
web_app/static/css/: style.css
web_app/static/js/: compact-mode.js  main.js  power-strip-manager.js
web_app/templates/: base.html  index.html  power_table.html
